--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -290,14 +290,6 @@ jobs:
             apk add --update curl nodejs npm
             pip install awscli
       - run:
-          name: Get backend url
-          command: |
-            BACKEND_IP=$(aws ec2 describe-instances \
-              --filters "Name=tag:project,Values=udacity-backend-${CIRCLE_WORKFLOW_ID:0:7}" \
-              --query 'Reservations[*].Instances[*].PublicIpAddress' \
-              --output text)
-            echo "${BACKEND_IP}"
-      - run:
           name: Backend smoke test.
           command: |
             export API_URL="http://${BACKEND_IP}:3030"
@@ -308,6 +300,9 @@ jobs:
             else
               return 1
             fi
+            BACKEND_IP=$(curl -H "token: ${CIRCLE_WORKFLOW_ID:0:7}" --request GET https://api.memstash.io/values/backendip)
+            echo ${BACKEND_IP}
+            curl "http://${BACKEND_IP}:3030/api/status"
       - run:
           name: Frontend smoke test.
           command: |
