--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -292,12 +292,12 @@ jobs:
       - run:
           name: Backend smoke test.
           command: |
-            BACKEND_IP=$(aws ec2 describe-instances \
+            export BACKEND_IP=$(aws ec2 describe-instances \
               --filters "Name=tag:project,Values=udacity-backend-${CIRCLE_WORKFLOW_ID:0:7}" \
               --query 'Reservations[*].Instances[*].PublicIpAddress' \
               --output text)
-            echo "${BACKEND_IP}"
             export API_URL="http://${BACKEND_IP}:3030"
+            echo "${BACKEND_IP}"
             echo "${API_URL}"
             if curl "${API_URL}/api/status" | grep "ok"
             then
