--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -206,11 +206,11 @@ jobs:
           command: |
             cd ~/project/backend
             npm install
-            npm run migrations > migrations_dump.txt
+            npm run migrations > migrations_test.txt
       - run:
           name: Send migration results to kvdb
           command: |
-            if grep -q "has been executed successfully." ~/project/backend/migrations_dump.txt
+            if grep -q "has been executed successfully." ~/project/backend/migrations_test.txt
             then
               # If you are using memstash.io, generate the token "7933fe63-4687-4fa1-8426-aa25aa1730ec" on the  website
               # curl -H "Content-Type: text/plain" -H "token: 7933fe63-4687-4fa1-8426-aa25aa1730ec" --request PUT --data "1" https://api.memstash.io/values/migration_${CIRCLE_WORKFLOW_ID:0:7}
