--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -207,7 +207,7 @@ jobs:
             cd ~/project/backend
             npm install
             npm run migrations > migrations_test.txt
-            pip install awscli
+            yum install -y awscli
       - run:
           name: Send migration results to kvdb
           command: |
