--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -177,7 +177,7 @@ jobs:
     steps:
       - checkout
       - add_ssh_keys:
-          fingerprints: ["c1:ab:39:fa:06:b2:4c:a3:e1:6e:df:d6:ae:8b:50:d0"]
+          fingerprints: ["0f:c0:e0:05:4c:28:23:5f:82:a7:49:b7:d2:b7:3b:cf"]
       - attach_workspace:
           at: ~/
       - run:
@@ -274,7 +274,7 @@ jobs:
     steps:
       - checkout
       - add_ssh_keys:
-          fingerprints: ["c1:ab:39:fa:06:b2:4c:a3:e1:6e:df:d6:ae:8b:50:d0"]
+          fingerprints: ["0f:c0:e0:05:4c:28:23:5f:82:a7:49:b7:d2:b7:3b:cf"]
       - attach_workspace:
           at: ~/
       - run:
