--- a/backend/package.json
+++ b/backend/package.json
@@ -53,7 +53,7 @@
     "glee-jwks-rsa": "^1.1.0",
     "joi": "^14.3.1",
     "jsonwebtoken": "^8.5.1",
-    "moment-timezone": "^0.5.28",
+    "moment-timezone": "^0.5.43",
     "passport": "^0.4.1",
     "passport-auth0": "^1.3.2",
     "passport-jwt": "^4.0.0",
@@ -64,8 +64,7 @@
     "typeorm": "^0.2.24",
     "uuid": "^3.4.0",
     "winston-loggly-bulk": "^2.0.3",
-    "winston-slack-webhook": "^0.1.6",
-    "standard-version": "^7.0.0"
+    "winston-slack-webhook": "^0.1.6"
   },
   "devDependencies": {
     "@nestjs/testing": "^6.11.11",
@@ -82,10 +81,10 @@
     "supertest": "^3.4.2",
     "ts-jest": "^24.3.0",
     "ts-loader": "^4.4.2",
-    "ts-node": "^7.0.1",
+    "ts-node": "^9.1.1",
     "tsconfig-paths": "^3.9.0",
     "tslint": "5.11.0",
-    "typescript": "^3.8.3",
+    "typescript": "^4.8.4",
     "webpack": "^4.42.1",
     "webpack-cli": "^3.3.11",
     "webpack-node-externals": "^1.7.2"
