--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -402,7 +402,7 @@ workflows:
           requires: [test-frontend, test-backend, scan-frontend, scan-backend]
           filters:
             branches:
-              only: [main, develop]
+              only: [develop]
       - configure-infrastructure:
           requires: [deploy-infrastructure]
       - run-migrations:
