--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,7 +1,7 @@
 version: 2.1
 
-orbs:
-  slack: circleci/slack@4.1
+# orbs:
+#   slack: circleci/slack@4.1
 
 commands:
   destroy-environment:
@@ -17,9 +17,9 @@ commands:
             aws cloudformation delete-stack --stack-name backend-stack-${CIRCLE_WORKFLOW_ID:0:7}
             aws s3 rm s3://udapeople-902338989534 --recursive
             aws cloudformation delete-stack --stack-name frontend-stack-${CIRCLE_WORKFLOW_ID:0:7}
-      - slack/notify:
-          event: pass
-          template: basic_fail_1
+      # - slack/notify:
+      #     event: pass
+      #     template: basic_fail_1
 
   revert-migrations:
     description: Revert the last migration if successfully run in the current workflow.
