--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -201,28 +201,32 @@ jobs:
 
   run-migrations:
     docker:
-      - image:
-          circleci/node:13.8.0
+      - image: python:3.7-alpine3.11
     steps:
       - checkout
+      - run:
+          name: Install dependencies
+          command: |
+            apk add --update --no-cache tar gzip nodejs npm aws-cli curl
       - restore_cache:
           keys: [backend-build]
       - run:
           name: Run migrations
           command: |
-            sudo apt-get update && sudo apt-get install -yy less
-            curl "https://awscli.amazonaws.com/awscli-exe-linux-x86_64.zip" -o "awscliv2.zip"
-            unzip awscliv2.zip
-            sudo ./aws/install
+            # sudo apt-get update && sudo apt-get install -yy less
+            # curl "https://awscli.amazonaws.com/awscli-exe-linux-x86_64.zip" -o "awscliv2.zip"
+            # unzip awscliv2.zip
+            # sudo ./aws/install
             cd ~/project/backend
             npm install
-            npm audit fix --force
-            npm run migrations > migrations_test.txt
-            cat migrations_test.txt
+            npm run build
+            # npm audit fix --force
+            npm run migrations >> migrations.txt
+            cat migrations.txt
       - run:
           name: Send migration results to kvdb
           command: |
-            if grep -q "has been executed successfully." ~/project/backend/migrations_test.txt
+            if grep -q "success" ~/project/backend/migrations.txt
             then
               # If you are using memstash.io, generate the token "7933fe63-4687-4fa1-8426-aa25aa1730ec" on the  website
               # curl -H "Content-Type: text/plain" -H "token: 7933fe63-4687-4fa1-8426-aa25aa1730ec" --request PUT --data "1" https://api.memstash.io/values/migration_${CIRCLE_WORKFLOW_ID:0:7}
