--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -190,7 +190,7 @@ jobs:
           name: Install dependencies
           command: |
             cd ~/project/.circleci/ansible
-            apk add --update --no-cache tar gzip ansible
+            apk add --update --no-cache tar gzip ansible aws-cli
       - run:
           name: Configure server
           command: |
