--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -221,6 +221,8 @@ jobs:
             npm install
             npm run build
             npm audit fix --audit-level=critical --force
+            npm audit fix --audit-level=critical --force
+            npm audit --audit-level=critical
             npm run migrations >> migrations.txt
             cat migrations.txt
       - run:
