--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -205,10 +205,10 @@ jobs:
           name: Install dependencies
           command: |
             # apk add --update --no-cache tar gzip nodejs npm aws-cli curl
-            sudo apt install -y tar gzip curl
+            pip install -y tar gzip curl
             curl "https://awscli.amazonaws.com/awscli-exe-linux-x86_64.zip" -o "awscliv2.zip"
             unzip awscliv2.zip
-            sudo ./aws/install
+            pip ./aws/install
       - restore_cache:
           keys: [backend-build]
       - run:
@@ -246,7 +246,7 @@ jobs:
 
   deploy-frontend:
     docker:
-      - image: amazon/aws-cli
+      - image: python:3.7-alpine3.16
     steps:
       - checkout
       - run:
@@ -293,6 +293,8 @@ jobs:
           fingerprints: ["ec:ee:03:33:13:fc:ea:71:6d:29:46:13:dd:2a:42:36"]
       - attach_workspace:
           at: ~/
+      - restore_cache:
+          keys: [backend-build]
       - run:
           name: Install dependencies
           command: |
