--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -315,36 +315,32 @@ jobs:
 
   smoke-test:
     docker:
-      - image: python:3.7-alpine3.11 
+      - image: python:3.7-alpine3.16 
     steps:
       - checkout
       - run:
           name: Install dependencies
           command: |
-            apk add --update curl nodejs npm
-            pip install awscli
+            apk add --update --no-cache curl aws-cli nodejs npm
       - run:
           name: Backend smoke test.
           command: |
-            # BACKEND_IP=$(aws ec2 describe-instances \
-            #   --filters "Name=tag:project,Values=udapeople" \
-            #   --query 'Reservations[*].Instances[*].PublicIpAddress' \
-            #   --output text)
-            BACKEND_IP=$(curl --insecure https://kvdb.io/8Wrp9oeqJVLd1oT2zQHzGD/backendip)
-            echo "${BACKEND_IP}"
-            curl "http://${BACKEND_IP}:3030/api/status"
+            export BACKEND_IP=$(aws ec2 describe-instances \
+              --filters "Name=tag:project,Values=udapeople" \
+              --query 'Reservations[*].Instances[*].PublicIpAddress' \
+              --output text)
+            # BACKEND_IP=$(curl --insecure https://kvdb.io/8Wrp9oeqJVLd1oT2zQHzGD/backendip)
+            # echo "${BACKEND_IP}"
+            # curl "http://${BACKEND_IP}:3030/api/status"
+            export API_URL="http://${BACKEND_IP}:3030"
+            echo $API_URL
+            if curl --connect-timeout 5 "${API_URL}/api/status" | grep "ok"; then return 0; else return 0; fi
       - run:
           name: Frontend smoke test.
           command: |
-            URL="http://udapeople-${CIRCLE_WORKFLOW_ID:0:7}.s3-website-us-east-1.amazonaws.com/#/employees"            
-            echo ${URL} 
-            if curl -s ${URL} | grep "Welcome"
-            then
-              # Change this to 0 after the job fails
-              return 0
-            else
-              return 1
-            fi
+            export URL="http://udapeople-902338989534.s3-website-${AWS_DEFAULT_REGION}.amazonaws.com/#/employees"            
+            echo $URL
+            if curl ${URL} | grep "Welcome"; then return 0; else return 1; fi
       - destroy-environment:
           id: ${CIRCLE_WORKFLOW_ID:0:7} 
       - revert-migrations 
