--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -367,8 +367,8 @@ jobs:
       - run:
           name: Get old stack workflow id and remove stacks
           command: |
-            echo <<pipeline.parameters.workflow_id>>
-            export OldWorkflowID=<<pipeline.parameters.workflow_id>>
+            echo ${CIRCLE_WORKFLOW_ID:0:7}
+            export OldWorkflowID=${CIRCLE_WORKFLOW_ID:0:7}
             export STACKS=$(aws cloudformation list-stacks \
             --query "StackSummaries[*].StackName" \
             --stack-status-filter CREATE_COMPLETE --no-paginate --output text)
