--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -281,8 +281,6 @@ jobs:
             apk add --update --no-cache tar gzip nodejs npm aws-cli ansible
             # apk add --update ansible nodejs npm rsync openssh
             # pip install awscli
-      - restore_cache:
-          keys: [backend-build]
       - run:
           name: Deploy backend
           command: |
@@ -413,7 +411,7 @@ workflows:
           requires: [run-migrations]
       - smoke-test:
           requires: [deploy-backend, deploy-frontend]
-      # - cloudfront-update:
-      #     requires: [smoke-test]
+      - cloudfront-update:
+          requires: [smoke-test]
       # - cleanup:
       #     requires: [cloudfront-update]
