--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -318,6 +318,8 @@ jobs:
             export API_URL="http://${BACKEND_IP}:3030"
             echo $API_URL
             cat .env
+            sudo netstat -tulpn | grep -w 3030
+            pm2 logs
             if curl --connect-timeout 5 "${API_URL}/api/status" | grep "ok"; then return 0; else return 1; fi
       - run:
           name: Frontend smoke test.
@@ -325,10 +327,10 @@ jobs:
             export URL="http://udapeople-${CIRCLE_WORKFLOW_ID:0:7}.s3-website-${AWS_DEFAULT_REGION}.amazonaws.com/#/employees"            
             echo $URL
             if curl ${URL} | grep "Welcome"; then return 0; else return 1; fi
-      - destroy-environment:
-          id: ${CIRCLE_WORKFLOW_ID:0:7} 
-      - revert-migrations:
-          id: ${CIRCLE_WORKFLOW_ID:0:7}
+      # - destroy-environment:
+      #     id: ${CIRCLE_WORKFLOW_ID:0:7} 
+      # - revert-migrations:
+      #     id: ${CIRCLE_WORKFLOW_ID:0:7}
 
   cloudfront-update:
     docker:
