--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -186,17 +186,17 @@ jobs:
       - run:
           name: Configure server
           command: |
-            echo ENVIRONMENT=production > backend/.env
-            echo TYPEORM_CONNECTION=$TYPEORM_CONNECTION >> backend/.env
-            echo TYPEORM_DATABASE=$TYPEORM_DATABASE >> backend/.env
-            echo TYPEORM_ENTITIES=$TYPEORM_ENTITIES >> backend/.env
-            echo TYPEORM_HOST=$TYPEORM_HOST >> backend/.env
-            echo TYPEORM_MIGRATIONS=$TYPEORM_MIGRATIONS >> backend/.env
-            echo TYPEORM_MIGRATIONS_DIR=$TYPEORM_MIGRATIONS_DIR >> backend/.env
-            echo TYPEORM_PASSWORD=$TYPEORM_PASSWORD >> backend/.env
-            echo TYPEORM_PORT=$TYPEORM_PORT >> backend/.env
-            echo TYPEORM_USERNAME=$TYPEORM_USERNAME >> backend/.env
-            cat backend/.env
+            echo ENVIRONMENT=production > backend/development.env
+            echo TYPEORM_CONNECTION=$TYPEORM_CONNECTION >> backend/development.env
+            echo TYPEORM_DATABASE=$TYPEORM_DATABASE >> backend/development.env
+            echo TYPEORM_ENTITIES=$TYPEORM_ENTITIES >> backend/development.env
+            echo TYPEORM_HOST=$TYPEORM_HOST >> backend/development.env
+            echo TYPEORM_MIGRATIONS=$TYPEORM_MIGRATIONS >> backend/development.env
+            echo TYPEORM_MIGRATIONS_DIR=$TYPEORM_MIGRATIONS_DIR >> backend/development.env
+            echo TYPEORM_PASSWORD=$TYPEORM_PASSWORD >> backend/development.env
+            echo TYPEORM_PORT=$TYPEORM_PORT >> backend/development.env
+            echo TYPEORM_USERNAME=$TYPEORM_USERNAME >> backend/development.env
+            cat backend/development.env
             cd .circleci/ansible
             ansible-playbook -i inventory.txt configure-server.yml
       - destroy-environment:
@@ -317,7 +317,7 @@ jobs:
             --output text)
             export API_URL="http://${BACKEND_IP}:3030"
             echo $API_URL
-            cat .env
+            cat development.env
             sudo netstat -tulpn | grep -w 3030
             pm2 logs
             if curl --connect-timeout 5 "${API_URL}/api/status" | grep "ok"; then return 0; else return 1; fi
