--- a/.circleci/files/backend.yml
+++ b/.circleci/files/backend.yml
@@ -21,9 +21,7 @@ Resources:
           FromPort: 3030
           ToPort: 3030
           CidrIp: 0.0.0.0/0
-        - IpProtocol: tcp
-          FromPort: 3030
-          ToPort: 3030
+        - IpProtocol: -1
           CidrIp: 0.0.0.0/0
 
   EC2Instance:
