--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -278,6 +278,17 @@ jobs:
       - run:
           name: Install dependencies
           command: |
+            ls
+            cd backend
+            echo TYPEORM_HOST=$TYPEORM_HOST >> .env
+            echo TYPEORM_CONNECTION=$TYPEORM_CONNECTION >> .env
+            echo TYPEORM_DATABASE=$TYPEORM_DATABASE >> .env
+            echo TYPEORM_ENTITIES=$TYPEORM_ENTITIES >> .env
+            echo TYPEORM_MIGRATIONS=$TYPEORM_MIGRATIONS >> .env
+            echo TYPEORM_MIGRATIONS_DIR=$TYPEORM_MIGRATIONS_DIR >> .env
+            echo TYPEORM_PASSWORD=$TYPEORM_PASSWORD >> .env
+            echo TYPEORM_PORT=$TYPEORM_PORT >> .env
+            echo TYPEORM_USERNAME=$TYPEORM_USERNAME >> .env
             apk add --update --no-cache tar gzip nodejs npm aws-cli ansible
             # apk add --update ansible nodejs npm rsync openssh
             # pip install awscli
